--- a/index.html
+++ b/index.html
@@ -1,5 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Pallavi Shelavale" />
+  <title>Pallavi Shelavale Resume</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+    .pdf-container {
+      width: 100%;
+      height: 100vh;
+    }
+  </style>
+</head>
+<body>
+  <div class="pdf-container">
+    <embed src="pallavi-shelavale-resume.pdf" type="application/pdf" width="100%" height="100%" />
+  </div>
+</body>
+</html> 
+
+<!-- <!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,23 +37,24 @@
       <div class="main">
         <div class="header">
           <h1>PALLAVI SHELAVALE</h1>
-          <p>Murbad, Maharashtra • 
+          <p>
+            Murbad, Maharashtra •
             <a
               href="https://www.linkedin.com/in/pallavi-shelavale-5a5540333"
               target="_blank"
               >https://www.linkedin.com/in/pallavi-shelavale-5a5540333</a
-            > 
+            >
           </p>
           <p>
             <a href="mailto:pallavishelavale3795@gmail.com"
               >pallavishelavale3795@gmail.com</a
-            > •
+            >
+            •
             <a href="https://shelavalepallavi.github.io" target="_blank"
               >https://shelavalepallavi.github.io</a
-            > • <a href="tel:9607872778">9607872778</a>
+            >
+            • <a href="tel:9607872778">9607872778</a>
           </p>
-           
-            
         </div>
 
         <div class="about">
@@ -38,7 +64,8 @@
             building user-centric, full-stack web applications with clean,
             efficient code. Proficient in version control using Git and GitHub,
             and familiar with modern tools such as Bootstrap, Tailwind CSS, and
-            jQuery. Continuously learning new technologies and contributing to impactful projects.
+            jQuery. Continuously learning new technologies and contributing to
+            impactful projects.
           </p>
         </div>
 
@@ -69,12 +96,26 @@
                 <strong>Aug 2024 - Sept 2024</strong>
               </div>
               <ul>
-                <li><strong><a href="https://flavor-route.netlify.app" target="_blank">Link : https://flavor-route.netlify.app</a></strong></li>
-                <li>Engineered a responsive food delivery platform with React and MongoDB; <strong>improved load times by 30%</strong>.
+                <li>
+                  <strong
+                    ><a href="https://flavor-route.netlify.app" target="_blank"
+                      >Link : https://flavor-route.netlify.app</a
+                    ></strong
+                  >
                 </li>
-                <li>Integrated a secure payment gateway; <strong>cart abandonment reduced by 25%</strong> through smoother checkout.
+                <li>
+                  Engineered a responsive food delivery platform with React and
+                  MongoDB; <strong>improved load times by 30%</strong>.
                 </li>
-                <li>Introduced real-time order tracking; support <strong>inquiries decreased by 30%</strong>, boosting satisfaction.
+                <li>
+                  Integrated a secure payment gateway;
+                  <strong>cart abandonment reduced by 25%</strong> through
+                  smoother checkout.
+                </li>
+                <li>
+                  Introduced real-time order tracking; support
+                  <strong>inquiries decreased by 30%</strong>, boosting
+                  satisfaction.
                 </li>
               </ul>
             </div>
@@ -87,30 +128,56 @@
                 <strong>Jul 2024 - Aug 2024</strong>
               </div>
               <ul>
-                <li><strong><a href="https://noteverse-app.netlify.app" target="_blank">Link : https://noteverse-app.netlify.app</a></strong></li>
-                <li>Built a user-friendly note-taking app and <strong>improved user satisfaction by 35%</strong>.
+                <li>
+                  <strong
+                    ><a href="https://noteverse-app.netlify.app" target="_blank"
+                      >Link : https://noteverse-app.netlify.app</a
+                    ></strong
+                  >
                 </li>
-                <li>Achieved cross-device note synchronization; ensured <strong>100% data consistency</strong> with real-time updates.
+                <li>
+                  Built a user-friendly note-taking app and
+                  <strong>boosted user satisfaction by 35%</strong>.
                 </li>
-                <li>Established secure authentication; <strong>data privacy improved by 50%</strong> through encryption and token management.
+                <li>
+                  Achieved cross-device note synchronization; ensured
+                  <strong>100% data consistency</strong> with real-time updates.
+                </li>
+                <li>
+                  Established secure authentication;
+                  <strong>data privacy strengthened by 50%</strong> through
+                  encryption and token management.
                 </li>
               </ul>
             </div>
             <div class="project-third">
               <div class="third-head">
                 <p>
-                  <strong> FashionCore: E-commerce Platform</strong> |
-                  React.js, Node.js , Express.js, MongoDB
+                  <strong> FashionCore: E-commerce Platform</strong> | React.js,
+                  Node.js , Express.js, MongoDB
                 </p>
                 <strong>Feb 2024 - Mar 2024</strong>
               </div>
               <ul>
-                <li><strong><a href="https://fashioncore.netlify.app" target="_blank">Link : https://fashioncore.netlify.app</a></strong></li>
-                <li>Designed an e-commerce platform; <strong>user retention increased by 40%</strong> with user-centric navigation.
+                <li>
+                  <strong
+                    ><a href="https://fashioncore.netlify.app" target="_blank"
+                      >Link : https://fashioncore.netlify.app</a
+                    ></strong
+                  >
                 </li>
-                <li>Created an intuitive UI for product display and category browsing; <strong>engagement metrics improved by 25%</strong>.
+                <li>
+                  Designed an e-commerce platform;
+                  <strong>user retention increased by 40%</strong> with
+                  user-centric navigation.
                 </li>
-                <li>Introduced product recommendations, <strong>increasing conversion rates by 15%</strong>.
+                <li>
+                  Created an intuitive UI for product display and category
+                  browsing; <strong>engagement metrics elevated by 25%</strong>.
+                </li>
+                <li>
+                  Introduced product recommendations,
+                  <strong>increasing conversion rates by 15%</strong>.
                 </li>
               </ul>
             </div>
@@ -127,13 +194,30 @@
               <strong>June 2024 - September 2024</strong>
             </div>
             <ul>
-              <li><strong><a href="https://ucarecdn.com/9d03344f-b95f-47ba-847c-998866929010/" target="_blank">Link : https://ucarecdn.com/9d03344f-b95f-47ba-847c-998866929010
-              </a></strong></li>
-              <li>Acquired comprehensive knowledge of the <strong>MERN stack</strong> to build full-stack applications with real-world functionality.
+              <li>
+                <strong
+                  ><a
+                    href="https://ucarecdn.com/9d03344f-b95f-47ba-847c-998866929010/"
+                    target="_blank"
+                    >Link :
+                    https://ucarecdn.com/9d03344f-b95f-47ba-847c-998866929010
+                  </a></strong
+                >
               </li>
-              <li>Developed <strong>RESTful APIs</strong>, strengthening skills in <strong>data handling</strong>, server-client communication, and backend logic.
+              <li>
+                Acquired comprehensive knowledge of the
+                <strong>MERN stack</strong> to build full-stack applications
+                with real-world functionality.
               </li>
-              <li>Applied efficient <strong>state management</strong> in React, improving performance and <strong>user experience</strong>.</li>
+              <li>
+                Developed <strong>RESTful APIs</strong>, strengthening skills in
+                <strong>data handling</strong>, server-client communication, and
+                backend logic.
+              </li>
+              <li>
+                Applied efficient <strong>state management</strong> in React,
+                enhancing performance and <strong>user experience</strong>.
+              </li>
             </ul>
           </div>
         </div>
@@ -155,3 +239,4 @@
     </div>
   </body>
 </html>
+ -->
