--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </body>
 </html> 
 
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -239,4 +239,4 @@
     </div>
   </body>
 </html>
- -->
+
