--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </body>
 </html> 
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -238,5 +238,5 @@
       </div>
     </div>
   </body>
-</html>
+</html> -->
 
