--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="pdf-container">
-    <embed src="./pallavi-shelavale-resume.pdf" type="application/pdf" width="100%" height="100%" />
+    <embed src="pallavi_shelavale_resume.pdf" type="application/pdf" width="100%" height="100%" />
   </div>
 </body>
 </html> 
